# now-playing

./: .gitignore  Package.appxmanifest  README.md  main.py  media.py  pyproject.toml
np/: __init__.py  core.py  icons.py  main.py  media.py  utils.py
np/ui/: main_window.ui
np/widgets/: NowPlayingList.py  NowPlayingListItem.py
references/: example.cs  pywinrt.py
resources/: icons.qrc
scripts/: build.py  generate_resources.py  pywinrt_install.py
