[project]
name = "now-playing"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.10.0",
    "winrt-windows-foundation>=3.2.1",
    "winrt-windows-foundation-collections>=3.2.1",
    "winrt-windows-media>=3.2.1",
    "winrt-windows-media-control>=3.2.1",
    "winrt-windows-storage-streams>=3.2.1",
    "winrt-windows-system>=3.2.1",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["./"]
include = ["np"]

[project.scripts]
np = "np.main:main"
